--- a/archive-to-s3/Gopkg.toml
+++ b/archive-to-s3/Gopkg.toml
@@ -28,3 +28,11 @@
 [[constraint]]
   name = "github.com/spf13/viper"
   version = "1.0.0"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/getsentry/raven-go"
+
+[[constraint]]
+  name = "github.com/bugsnag/bugsnag-go"
+  version = "1.3.1"
